--- a/src/scss/Components/nav.scss
+++ b/src/scss/Components/nav.scss
@@ -1,41 +1,78 @@
 .nav {
-  
-
+  transition: all 3s;
   &__drawer {
     width: 15rem;
     grid-row: 1/-1;
     grid-column: 1/1;
-    background-color: #123C69;
+    background-color: #123c69;
     border: 1px solid rgba(116, 116, 116, 0.39);
-    transition: all 2.3s;
+    transition: all 0.5s;
     display: flex;
-    justify-content: flex-end;
-    align-items: start;
+    flex-direction: column;
 
+    &-top {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 2rem;
+      flex-direction: column;
 
-  
+      & span {
+        background-color: #9fa0a3;
+        height: 2px;
+        width: 55%;
+        align-self: center;
+        justify-self: center;
+        margin-top: .5rem;
+        margin-bottom: 1rem;
+      }
+    }
+    &-middle {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      transition: all 0.5s;
+    }
   }
 }
 
 .open {
- 
   width: 8.5rem;
   grid-column: 1/-1;
 
+  transition: all 0.5s;
+}
 
-  transition: all 1.3s;
-}
-.dashboard{
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  grid-template-rows: minmax(100vh, 60rem);
-}
-.icon{
+.icon {
   color: white;
   margin-top: 3rem;
   margin-right: 1rem;
 }
-*{
-  margin: 0;
-  padding: 0;
+
+.avatar {
+  height: 7rem !important;
+  width: 7rem !important;
+  padding: 8px;
+  transition: all 0.5s;
+  align-self: center;
+  justify-self: center;
+
+  &-open {
+    height: 8rem !important;
+    width: 8rem !important;
+    padding: 8px;
+    transition: all 0.5s;
+  }
+}
+
+.listItem{
+  width: 100% !important;
+  transition: all 0.5s;
+}
+.mg{
+  margin-left: .27rem;
+  transition: all 0.5s;
+}
+.MuiTypography-body1{
+  font-size: 1.4rem !important;
 }
