--- a/src/scss/Components/_dashboard.scss
+++ b/src/scss/Components/_dashboard.scss
@@ -1,5 +1,5 @@
-.dashboard {
+.App {
     display: grid;
     grid-template-columns: max-content 1fr 1fr;
-    grid-template-rows: 10rem minmax(100vh, 50rem);
+    grid-template-rows: 10rem minmax(100vh, 40rem);
   }
