--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,10 @@
 
 
 @import './Base/base';
+@import './Base/vars';
 
 
 @import './Components/dashboard';
 @import './Components/nav.scss';
 @import './Components/jobs';
+@import './Components/account';
