--- a/src/scss/Components/_jobs.scss
+++ b/src/scss/Components/_jobs.scss
@@ -1,6 +1,74 @@
-.jobs{
-    grid-row: 2/3;
-    grid-column: 2/-1;
-    font-size: 3rem;
-    color: black;
+.jobs {
+  grid-row: 2/3;
+  grid-column: 2/-1;
+  font-size: 3rem;
+  color: black;
+
+  &__button {
+  }
+}
+
+.addjob {
+  grid-row: 2/3;
+  grid-column: 2/-1;
+  display: grid;
+  grid-template-rows: 9rem auto;
+  grid-template-columns: 15rem 15rem 1fr 1fr;
+
+  &-top {
+    grid-column: 1/-1;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid rgb(121, 121, 121);
+
+    background-color: rgba(241, 240, 240, 0.953);
+
+    & h1{
+        font-size: 2rem;
+        color: rgb(68, 68, 68);
+        justify-self: center;
+        align-self: flex-end;
+        margin-left: 2rem;
+        padding-bottom: 2rem;
+      
+    }
+  }
+}
+
+.form{
+
+    &-group{
+        grid-row: 2/3;
+        grid-column: 1/3;
+        align-self: start;
+        justify-self: start;
+        margin-left: 1rem;
+        height: 100%;
+        width: 100%;
+      
+        & h3{
+            margin-top: 1rem;
+            margin-left: 2rem;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+    }
+
+
+
+    &-item {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        justify-self: center;
+        margin: .5rem;
+        padding: .5rem;
+
+        & div{
+            font-size: 1.2rem;
+            font-weight: 400;
+        }
+
+    }
 }
