--- a/src/scss/Components/_jobs.scss
+++ b/src/scss/Components/_jobs.scss
@@ -12,8 +12,8 @@
   grid-row: 2/3;
   grid-column: 2/-1;
   display: grid;
-  grid-template-rows: 9rem auto;
-  grid-template-columns: 15rem 15rem 1fr 1fr;
+  grid-template-rows: 7rem auto;
+  grid-template-columns: 15rem 25rem 1fr 1fr;
 
   &-top {
     grid-column: 1/-1;
@@ -44,14 +44,22 @@
         align-self: start;
         justify-self: start;
         margin-left: 1rem;
-        height: 100%;
-        width: 100%;
+        
       
         & h3{
             margin-top: 1rem;
             margin-left: 2rem;
             font-size: 1.5rem;
             font-weight: 700;
+            padding-bottom: 4px;
+          
+        }
+        &-span{
+           
+            background: $color-primary;
+            width: 4rem;
+            height: 4px;
+            margin-left: 2rem;
         }
     }
 
