--- a/src/scss/Components/nav.scss
+++ b/src/scss/Components/nav.scss
@@ -2,6 +2,8 @@
   transition: all 3s;
   &__drawer {
     width: 15rem;
+
+    height: 100vh;
     grid-row: 1/-1;
     grid-column: 1/2;
     background-color: $color-primary;
@@ -10,7 +12,10 @@
     display: flex;
     flex-direction: column;
     // make the position static
+
+    position: -webkit-sticky; /* Safari */
     position: sticky;
+    top: 0;
 
     &-items {
       padding: 1.2rem 0;
@@ -27,7 +32,7 @@
         border-top-left-radius: 75px;
         border-bottom-left-radius: 75px;
         overflow-x: hidden;
-        margin-right: .16rem;
+        margin-right: 0.16rem;
       }
       &:hover:active {
         background-color: darken(rgba(95, 95, 95, 0.3), 40%);
@@ -85,7 +90,6 @@
   grid-column: 1/2;
   grid-row: 1/-1;
   transition: all 0.5s;
- 
 }
 
 .icon {
