--- a/src/scss/Components/_dashboard.scss
+++ b/src/scss/Components/_dashboard.scss
@@ -1,6 +1,6 @@
 .App {
     display: grid;
     grid-template-columns: max-content 1fr 1fr;
-    grid-template-rows: 10rem minmax(100vh, 40rem);
+    grid-template-rows: 1fr 1fr;
     position: relative;
   }
