--- a/src/scss/Base/_base.scss
+++ b/src/scss/Base/_base.scss
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth; 
   
   }
 
@@ -18,7 +19,7 @@
   }
   
   component {
-    grid-row: 1/3;
+    grid-row: 1/-1;
     grid-column: 2/-1;
   }
   /* Chrome, Safari, Edge, Opera */
