--- a/src/scss/Components/_jobs.scss
+++ b/src/scss/Components/_jobs.scss
@@ -45,6 +45,8 @@
         justify-self: start;
         margin-left: 1rem;
         width: 97%;
+        position: relative;
+       
         &-1{
             width: 100%;
         }
