--- a/src/scss/Components/nav.scss
+++ b/src/scss/Components/nav.scss
@@ -3,8 +3,9 @@
   &__drawer {
     width: 15rem;
 
-  min-height: 99.8vh;
-  max-height: 40rem;
+ max-height: 99.8vh;
+  min-height: 40rem;
+
     grid-row: 1/-1;
     grid-column: 1/2;
     background-color: $color-primary;
