--- a/src/scss/Base/_base.scss
+++ b/src/scss/Base/_base.scss
@@ -33,4 +33,13 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+body{
+
+  overflow: visible !important;
+
+}
+.MuiPickersSlideTransition-transitionContainer > * {
+  top: -4px !important;}
+  
+  
   
