--- a/src/scss/Base/_vars.scss
+++ b/src/scss/Base/_vars.scss
@@ -1,2 +1,4 @@
 $color-primary: #123c69;
-$color-white: #fff
+$color-white: #fff;
+$color-gray: rgba(163, 163, 163, 0.308);
+$color-danger: rgb(194, 13, 13); 
