--- a/src/scss/Base/_vars.scss
+++ b/src/scss/Base/_vars.scss
@@ -1,4 +1,5 @@
 $color-primary: #123c69;
 $color-white: #fff;
-$color-gray: rgba(163, 163, 163, 0.308);
+$color-gray: rgba(223, 223, 223, 0.609);
 $color-danger: rgb(194, 13, 13); 
+$color-green: rgb(27, 202, 4);
